--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but mercadotrack-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Lo lamentamos pero MercadoTrack no funciona correctamente sin JavaScript habilitado. Por favor habilitalo para continuar.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
