--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <meta name="description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo!" >
+    <meta name="description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo." >
+
+    <!-- twitter -->
+    <meta name="twitter:title" content="MercadoTrack">
+    <meta name="twitter:description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo.">
+    <meta name="twitter:image" content="https://mercadotrack.com/img/mtrack_promo.5a79ed2a.svg">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>MercadoTrack</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
