changes for meta

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta name="description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo." >
 
+    <!-- og -->
+    <meta property="og:title" content="MercadoTrack">
+    <meta property="og:description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo.">
+    <meta property="og:image" content="https://mercadotrack.com/img/mtrack_promo.5a79ed2a.svg">
+    <meta property="og:url" content="https://mercadotrack.com">
+
     <!-- twitter -->
-    <meta name="twitter:title" content="MercadoTrack">
-    <meta name="twitter:description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo.">
-    <meta name="twitter:image" content="https://mercadotrack.com/img/mtrack_promo.5a79ed2a.svg">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@mercadotrack">
+    <meta name="twitter:site" content="@mercadotrack">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>MercadoTrack</title>
