mtrack_promo.png hardcoded

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- og -->
     <meta property="og:title" content="MercadoTrack">
     <meta property="og:description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo.">
-    <meta property="og:image" content="https://mercadotrack.com/img/mtrack_promo.5a79ed2a.svg">
+    <meta property="og:image" content="https://mercadotrack.com/mtrack_promo.png">
     <meta property="og:url" content="https://mercadotrack.com">
 
     <!-- twitter -->
