last change tonight, I promise

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
     <!-- og -->
     <meta property="og:title" content="MercadoTrack">
     <meta property="og:description" content="Segui articulos de MercadoLibre y mira sus precios a lo largo del tiempo.">
-    <meta property="og:image" content="https://mercadotrack.com/mtrack_promo_small.png">
+    <meta property="og:image" content="https://mercadotrack.com/mtrack_promo_large.png">
     <meta property="og:url" content="https://mercadotrack.com">
 
     <!-- twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@mercadotrack">
-    <meta name="twitter:site" content="@mercadotrack">
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:image" content="https://mercadotrack.com/mtrack_promo_small.png">
+    <meta property="twitter:creator" content="@mercadotrack">
+    <meta property="twitter:site" content="@mercadotrack">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>MercadoTrack</title>
